# subs

./: .gitignore  README.md  data.db-shm  data.db-wal  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  main.yml  release.yml
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/core-api/: Cargo.toml
src-tauri/crates/core-api/src/: lib.rs
src-tauri/crates/core-db/: Cargo.toml
src-tauri/crates/core-db/src/: lib.rs
src-tauri/crates/core-domain/: Cargo.toml
src-tauri/crates/core-domain/src/: dashboard.rs  lib.rs  payments.rs  plans.rs  subscribers.rs  subscriptions.rs
src-tauri/crates/core-license/: Cargo.toml
src-tauri/crates/core-license/src/: lib.rs
src-tauri/migrations/: V1__initial_schema.sql
src-tauri/src/: main.rs
src/components/: MainLayout.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Table.tsx
src/features/auth/: Login.tsx
src/features/dashboard/: Dashboard.tsx
src/features/payments/: PaymentsList.tsx
src/features/plans/: PlansList.tsx
src/features/reports/: Reports.tsx
src/features/settings/: Settings.tsx
src/features/subscribers/: SubscribersList.tsx
src/features/subscriptions/: SubscriptionsList.tsx
src/lib/: tauri.ts
src/stores/: appStore.ts  authStore.ts
